# validation_metrics_computation

./: .dockerignore  .gitignore  Dockerfile  README.md  blank_main_config.ini  main.py  pyproject.toml  requirements.txt  run_all.sh  setup.py
.github/: build_ubuntu.yml  build_windows.yml
.github/workflows/: build.yml  build_macos.yml  build_macos_arm.yml  build_ubuntu.yml  build_windows.yml  docker-image.yml  publish.yml
.ipynb_checkpoints/: compute_study_example-checkpoint.ipynb
Computation/: dice_computation.py
Plotting/: confidence_intervals_plot.py  metric_versus_binned_boxplot.py
Studies/: AbstractStudy.py  SegmentationStudy.py  compare_architectures.py  compare_tumor_postop_studies.py  hgg_postop_segmentation.py  hgg_postop_testset_inference.py  hgg_preop_segmentation.py  interrater_study.py  study_connector.py
Utils/: PatientMetricsStructure.py  io_converters.py  latex_converter.py  resources.py  statistics.py  volume_utilities.py
Validation/: custom_airways_metrics_computation.py  extra_metrics_computation.py  instance_segmentation_validation.py  kfold_model_validation.py  validation_utilities.py
notebooks/: compute_study_example.ipynb  compute_validation_example.ipynb
raidionicsval/: __main__.py  compute.py
raidionicsval/Computation/: dice_computation.py  dice_computation_instance.py  medpy_metrics.py  standalone_computation.py
raidionicsval/Plotting/: agreement_plot.py  classification_plot.py  (+2 more)
tests/: conftest.py  download_resources.py  studies_pipeline_test.py  validation_pipeline_test.py  validation_pipeline_test_docker.py
(+19 files in other folders)
